# wolf

./: .dockerignore  CMakeLists.txt
.devcontainer/: devcontainer.json
.github/workflows/: build-docs.yml  clang-format.yml  docker-build.yml  linux-build-test.yml
cmake/: BoostLoader.cmake
docker/: gstreamer.Dockerfile  startup.sh  supervisord.conf  wolf.Dockerfile
docs/modules/ROOT/: nav.adoc
docs/modules/apps/pages/: steam.adoc
docs/modules/dev/pages/: lobbies.adoc  wayland.adoc
docs/modules/dev/partials/: spec.json
docs/modules/user/pages/: configuration.adoc  environment-considerations.adoc  quickstart.adoc  troubleshooting.adoc  wolf-ui.adoc
src/core/: CMakeLists.txt
src/core/src/core/: audio.hpp  batched_send.hpp  docker.hpp  gstreamer.hpp  virtual-display.hpp
src/gst-video-context/: CMakeLists.txt
src/gst-video-context/gst-video-context/: gst-video-context.cpp  gst-video-context.hpp  no-cuda-context.cpp
src/gst-video-context/gst-video-context/stub/: cuda.h  cudaGL.h
src/moonlight-protocol/: CMakeLists.txt
src/moonlight-server/: CMakeLists.txt  wolf.cpp
src/moonlight-server/api/: api.cpp  api.hpp  endpoints.cpp  http_server.hpp  unix_socket_server.cpp
src/moonlight-server/audio/: pulse_router.cpp  pulse_router.hpp
src/moonlight-server/control/: control.cpp  input_handler.cpp
src/moonlight-server/events/: events.hpp  reflectors.hpp
src/moonlight-server/gst-plugin/: audio.hpp  gstrtpmoonlightpay_video.cpp
src/moonlight-server/introspect/: introspect.cpp  introspect.hpp
src/moonlight-server/rest/: endpoints.hpp  servers.cpp
src/moonlight-server/rtp/: udp-ping.cpp  udp-ping.hpp
src/moonlight-server/rtsp/: commands.hpp  net.hpp
src/moonlight-server/runners/: docker.cpp  docker.hpp  process.cpp  process.hpp
src/moonlight-server/sessions/: common.cpp  common.hpp  handlers.hpp  lobbies.cpp  moonlight.cpp
src/moonlight-server/state/: config.hpp  configTOML.cpp  data-structures.hpp  serialised_config.hpp  sessions.hpp  utils.cpp  utils.hpp
src/moonlight-server/state/default/: config.include.toml  (+3 more)
src/moonlight-server/streaming/: streaming.cpp  streaming.hpp
tests/: CMakeLists.txt  main.cpp  testBatchedSend.cpp  testGSTPlugin.cpp  testMoonlight.cpp  testSerialization.cpp  testWolfAPI.cpp
tests/assets/: config.test.toml
tests/docker/: testDocker.cpp
